--- a/HelicopterGameProject/MainWindow.xaml
+++ b/HelicopterGameProject/MainWindow.xaml
@@ -6,13 +6,11 @@
         xmlns:local="clr-namespace:HelicopterGameProject"
         mc:Ignorable="d"
         Title="Helicopter Game Project" Height="450" Width="800">
-    <Window.Resources>
-        <BitmapImage x:Key="ImageSource1" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="C:\Users\Dipak Mukesh\OneDrive - Sparta Global Limited\Engineering40\SpartaProject\HelicopterGameProject\HelicopterGameProject\Resources\Helicopter.png"/>
-    </Window.Resources>
     <Grid Background="#FF191919">
-        <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,-0.4,0"/>
+        <Canvas>
+        <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,0.4,0"/>
         <Label x:Name="Title" Content="Enjoy the game and Remember the childhood" HorizontalAlignment="Left" Margin="367,0,0,0" VerticalAlignment="Top" FontSize="20" FontFamily="Trebuchet MS"/>
-        <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,-0.4,0"/>
+        <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,0.4,0"/>
         <Label x:Name="Distance" Content="Distance: " HorizontalAlignment="Left" Margin="10,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
         <Label x:Name="DistanceResult" Content="0" HorizontalAlignment="Left" Margin="93,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
         <Label x:Name="ScoreTitle" Content="Best Score:" HorizontalAlignment="Left" Margin="644,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
@@ -20,11 +18,12 @@
         <StackPanel HorizontalAlignment="Left" Height="100" Margin="-339,-55,0,0" VerticalAlignment="Top" Width="100"/>
         <Button x:Name="btnHelicopter" Content="Button" HorizontalAlignment="Left" Margin="31,148,0,0" VerticalAlignment="Top" Width="150" Height="98" RenderTransformOrigin="-0.756,0.67">
             <Button.Background>
-                <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/Helicopter.png"/>
+                <ImageBrush ImageSource="pack://siteoforigin:,,,/bin/Debug/Helicopter.png"/>
             </Button.Background>
         </Button>
-        <Rectangle x:Name="Pillar1" Fill="#FF38DA17" HorizontalAlignment="Left" Height="120" Margin="302,32,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
-        <Rectangle x:Name="Pillar2" Fill="#FF38DA17" HorizontalAlignment="Left" Height="120" Margin="439,254,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
-
+        <Rectangle x:Name="Pillar1" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="513,34,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
+        <Rectangle x:Name="Pillar2" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="662,273,0,0" Stroke="White" VerticalAlignment="Top" Width="60" RenderTransformOrigin="1.128,0.518"/>
+        <Rectangle x:Name="Pillar3" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="333,148,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
+      </Canvas>
     </Grid>
 </Window>
