--- a/HelicopterGameProject/MainWindow.xaml
+++ b/HelicopterGameProject/MainWindow.xaml
@@ -1,29 +1,33 @@
-﻿<Window x:Class="HelicopterGameProject.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="HelicopterGameProject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HelicopterGameProject"
         mc:Ignorable="d"
+        MouseDown="OnClickDown"
+        MouseUp="OnClickUp"
         Title="Helicopter Game Project" Height="450" Width="800">
+
     <Grid Background="#FF191919">
         <Canvas>
-        <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,0.4,0"/>
-        <Label x:Name="Title" Content="Enjoy the game and Remember the childhood" HorizontalAlignment="Left" Margin="367,0,0,0" VerticalAlignment="Top" FontSize="20" FontFamily="Trebuchet MS"/>
-        <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,0.4,0"/>
-        <Label x:Name="Distance" Content="Distance: " HorizontalAlignment="Left" Margin="10,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
-        <Label x:Name="DistanceResult" Content="0" HorizontalAlignment="Left" Margin="93,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
-        <Label x:Name="ScoreTitle" Content="Best Score:" HorizontalAlignment="Left" Margin="644,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
-        <Label x:Name="ScoreResult" Content="0" HorizontalAlignment="Left" Margin="749,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
-        <StackPanel HorizontalAlignment="Left" Height="100" Margin="-339,-55,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button x:Name="btnHelicopter" Content="Button" HorizontalAlignment="Left" Margin="31,148,0,0" VerticalAlignment="Top" Width="150" Height="98" RenderTransformOrigin="-0.756,0.67">
-            <Button.Background>
-                <ImageBrush ImageSource="pack://siteoforigin:,,,/bin/Debug/Helicopter.png"/>
-            </Button.Background>
-        </Button>
-        <Rectangle x:Name="Pillar1" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="513,34,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
-        <Rectangle x:Name="Pillar2" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="662,273,0,0" Stroke="White" VerticalAlignment="Top" Width="60" RenderTransformOrigin="1.128,0.518"/>
-        <Rectangle x:Name="Pillar3" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Margin="333,148,0,0" Stroke="White" VerticalAlignment="Top" Width="60"/>
-      </Canvas>
+            <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,0.4,0"/>
+            <Label x:Name="Title" Content="Enjoy the game and Remember the childhood" HorizontalAlignment="Left" Margin="367,0,0,0" VerticalAlignment="Top" FontSize="20" FontFamily="Trebuchet MS"/>
+            <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,0.4,0"/>
+            <Label x:Name="Distance" Content="Distance: " HorizontalAlignment="Left" Margin="10,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
+            <Label x:Name="DistanceResult" Content="0" HorizontalAlignment="Left" Margin="93,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
+            <Label x:Name="ScoreTitle" Content="Best Score:" HorizontalAlignment="Left" Margin="644,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
+            <Label x:Name="ScoreResult" Content="0" HorizontalAlignment="Left" Margin="749,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
+            <StackPanel HorizontalAlignment="Left" Height="100" Margin="-339,-55,0,0" VerticalAlignment="Top" Width="100"/>
+            <Button x:Name="btnHelicopter" HorizontalAlignment="Left" VerticalAlignment="Top" Width="112" Height="63" RenderTransformOrigin="-0.756,0.67" Canvas.Left="30" Canvas.Top="185">
+                <Button.Background>
+                    <ImageBrush ImageSource="C:\Users\Dipak Mukesh\OneDrive - Sparta Global Limited\Engineering40\SpartaProject\HelicopterGameProject\HelicopterGameProject\Resources\Helicopter.png"/>
+                </Button.Background>
+            </Button>
+            <Rectangle x:Name="Pillar1" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="50" Canvas.Left="513" Canvas.Top="34"/>
+            <Rectangle x:Name="Pillar2" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="50" RenderTransformOrigin="1.128,0.518" Canvas.Left="672" Canvas.Top="273"/>
+            <Rectangle x:Name="Pillar3" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="50" Canvas.Left="333" Canvas.Top="148"/>
+            <Image x:Name="image1" Height="100" Canvas.Left="534" Canvas.Top="127" Width="100"/>
+        </Canvas>
     </Grid>
 </Window>
