--- a/HelicopterGameProject/MessageScreen.xaml
+++ b/HelicopterGameProject/MessageScreen.xaml
@@ -14,7 +14,7 @@
         <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,0.4,0"/>
         <Label x:Name="Title" Content="Enjoy the game and Remember the childhood" HorizontalAlignment="Left" Margin="367,0,0,0" VerticalAlignment="Top" FontSize="20" FontFamily="Trebuchet MS"/>
         <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,0.4,0"/>
-        <Label x:Name="Distance" Content="Distance: " HorizontalAlignment="Left" Margin="10,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
+        <Label x:Name="Distance" Content=" survive:" HorizontalAlignment="Left" Margin="10,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
         <Label x:Name="DistanceResult" Content="0" HorizontalAlignment="Left" Margin="93,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
         <Label x:Name="ScoreTitle" Content="Best Score:" HorizontalAlignment="Left" Margin="644,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
         <Label x:Name="ScoreResult" Content="0" HorizontalAlignment="Left" Margin="749,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
