--- a/HelicopterGameProject/MainWindow.xaml
+++ b/HelicopterGameProject/MainWindow.xaml
@@ -8,7 +8,11 @@
         Title="Helicopter Game Project" Height="450" Width="800">
 
     <Grid Background="#FF191919">
-        <Canvas >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="131*"/>
+        </Grid.RowDefinitions>
+        <Canvas Margin="0,0,-0.4,0" Grid.RowSpan="2">
             <Rectangle x:Name="TitleRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="34" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,0,0.4,0"/>
             <Label x:Name="Title" Content="Enjoy the game and Remember the childhood" HorizontalAlignment="Left" Margin="367,0,0,0" VerticalAlignment="Top" FontSize="20" FontFamily="Trebuchet MS"/>
             <Rectangle x:Name="CalcuRect" Fill="#FF38DA17" HorizontalAlignment="Left" Height="47" Stroke="White" VerticalAlignment="Top" Width="794" Margin="0,373,0.4,0"/>
@@ -17,16 +21,16 @@
             <Label x:Name="ScoreTitle" Content="Best Score:" HorizontalAlignment="Left" Margin="644,380,0,0" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontSize="18" FontWeight="Bold"/>
             <Label x:Name="ScoreResult" Content="0" HorizontalAlignment="Left" Margin="749,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.167,-0.769" FontSize="18" FontFamily="Trebuchet MS"/>
             <StackPanel HorizontalAlignment="Left" Height="100" Margin="-339,-55,0,0" VerticalAlignment="Top" Width="100"/>
-            <Button x:Name="btnHelicopter" HorizontalAlignment="Left" VerticalAlignment="Top" Width="82" Height="42" RenderTransformOrigin="-0.756,0.67" Canvas.Left="30" Canvas.Top="185" KeyUp="KeyIsUp">
-                <Button.Background>
-                    <ImageBrush ImageSource="C:\Users\Dipak Mukesh\OneDrive - Sparta Global Limited\Engineering40\SpartaProject\HelicopterGameProject\HelicopterGameProject\Resources\Helicopter.png"/>
-                </Button.Background>
-            </Button>
             <Rectangle x:Name="Pillar1" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="30" Canvas.Left="471" Canvas.Top="34"/>
             <Rectangle x:Name="Pillar2" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="30" RenderTransformOrigin="1.128,0.518" Canvas.Left="672" Canvas.Top="148"/>
-            <Rectangle x:Name="Pillar3" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="30" Canvas.Left="286" Canvas.Top="148"/>
+            <Rectangle x:Name="Pillar3" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="30" Canvas.Left="274" Canvas.Top="148"/>
             <Image x:Name="image1" Height="100" Canvas.Left="534" Canvas.Top="127" Width="100"/>
             <Rectangle x:Name="Pillar4" Fill="#FF38DA17" HorizontalAlignment="Left" Height="100" Stroke="White" VerticalAlignment="Top" Width="30" RenderTransformOrigin="1.128,0.518" Canvas.Left="471" Canvas.Top="274"/>
+            <Rectangle x:Name="RectHeli" Height="42" Stroke="White" Canvas.Top="169" Width="49" Canvas.Left="44" MouseDown="MseDown" MouseUp="MseUP">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="C:\Users\Dipak Mukesh\OneDrive - Sparta Global Limited\Engineering40\SpartaProject\HelicopterGameProject\HelicopterGameProject\Resources\Helicopter.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
         </Canvas>
     </Grid>
 </Window>
